<resources>
    <string name="app_name">ITCentar-FitnessApp</string>
    <string name="greetings">Greetings</string>
    <string name="username">Username</string>
    <string name="workout_level">Workout level</string>
    <string name="dayoftheweek">DayOfTheWeek</string>
    <string name="dayOfTheWeek">Day of the week</string>
    <string name="_30_may">30 May</string>
    <string name="Monday">Monday</string>
    <string name="letter_m">M</string>
    <string name="points">Points</string>
    <string name="recipe_of_the_day">Recipe of the day</string>
    <string name="protein_pancakes_with_strawberries">Protein pancakes with strawberries</string>
    <string name="placeholder">Placeholder!</string>
    <string name="this_weeks_progress">This Weeks Progress</string>
    <string name="_25_completed_events">25 completed events</string>
    <string name="scale">Scale</string>
    <string name="drag_and_drop_elements_to_reorder_them">Drag and drop elements to reorder them!</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="week_progress_month_progress_workout_tip">Week progress, month progress, workout tip</string>
    <string name="_25_september">25 September</string>
    <string name="_5_day_better_you_program">5 day better you program</string>
</resources>