<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ReorderElementsActivity"
    android:padding="5dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:text="@string/drag_and_drop_elements_to_reorder_them"
        android:textColor="@color/black"
        android:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_reorder_elements"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_save_reorder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:autoSizeTextType="uniform"
            android:layout_weight="0.5"
            android:text="@string/save" />

        <Button
            android:id="@+id/button_cancel_reorder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:layout_margin="5dp"
            android:layout_weight="0.5"
            android:text="@string/cancel" />

    </LinearLayout>


</LinearLayout>