<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_user_profile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
       app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/image_view_user_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="10dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:riv_corner_radius="12dp"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/text_view_user_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:textColor="@color/teal"
                android:text="Points"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/image_view_user_image"
                app:layout_constraintHorizontal_bias="0.466"
                app:layout_constraintStart_toStartOf="@+id/image_view_user_image"
                app:layout_constraintTop_toTopOf="@+id/image_view_user_image" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/image_view_user_image"
                app:layout_constraintStart_toEndOf="@+id/image_view_user_image"
                app:layout_constraintTop_toTopOf="@+id/image_view_user_image">


                <TextView
                    android:id="@+id/text_view_user_greetings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/greetings"
                    android:textColor="@color/gray"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/text_view_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textColor="@color/black"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_user_workout_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/workout_level"
                    android:textColor="@color/teal"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout"
                app:layout_constraintTop_toTopOf="parent">


                <ImageButton
                    android:id="@+id/image_button_document"
                    android:layout_width="35sp"
                    android:layout_height="35sp"
                    android:layout_weight="1"
                    android:background="@drawable/document" />

                <ImageButton
                    android:id="@+id/image_button_bell"
                    android:layout_width="35sp"
                    android:layout_height="35sp"
                    android:layout_weight="1"
                    android:background="@drawable/bell" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_view_user_image"
                >

                <TextView
                    android:id="@+id/text_view_day_of_the_week"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Monday"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginEnd="15dp"
                    android:layout_alignParentRight="true"
                    android:padding="5dp"
                    android:background="@drawable/rounded_layout_teal_background">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/ic_baseline_calendar_today_white_24"
                        />

                    <TextView
                        android:id="@+id/text_view_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_30_may"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"/>
                </LinearLayout>


            </RelativeLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_days_of_week"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2">
    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>