<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_user_profile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.25" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.08" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.75" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.30" />


            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/image_view_user_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/guideline4"
                app:riv_corner_radius="12dp"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/text_view_user_points"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:autoSizeTextType="uniform"
                android:background="@drawable/rounded_layout_lightteal_border"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/points"
                android:textColor="@color/teal"
                app:layout_constraintBottom_toTopOf="@+id/text_view_day_of_the_week"
                app:layout_constraintDimensionRatio="0.8:0.3"
                app:layout_constraintEnd_toEndOf="@+id/image_view_user_image"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/image_view_user_image" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="2:1"
                android:layout_marginLeft="5sp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/image_view_user_image"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="@+id/image_view_user_image">


                <TextView
                    android:id="@+id/text_view_user_greetings"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.25"
                    android:text="@string/greetings"
                    android:textColor="@color/gray"
                    android:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/text_view_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.4"
                    android:text="@string/username"
                    android:textColor="@color/black"
                   android:autoSizeTextType="uniform"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_user_workout_level"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:text="@string/workout_level"
                    android:textColor="@color/teal"
                    android:autoSizeTextType="uniform" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:padding="5sp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/image_view_user_image"
                app:layout_constraintDimensionRatio="2:1"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toTopOf="@+id/guideline4">


                <ImageButton
                    android:id="@+id/image_button_document"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:layout_marginRight="10sp"
                    android:background="@drawable/document"
                    android:scaleType="centerCrop" />

                <ImageButton
                    android:id="@+id/image_button_bell"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:background="@drawable/bell"
                    android:scaleType="centerCrop" />
            </LinearLayout>


            <TextView
                android:id="@+id/text_view_day_of_the_week"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="2:0.7"
                android:layout_marginTop="15sp"
                android:text="@string/Monday"
                android:textColor="@color/black"
                android:autoSizeTextType="uniform"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline9"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/image_view_user_image" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="3:0.7"
                android:background="@drawable/rounded_layout_teal_background"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/text_view_day_of_the_week"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toTopOf="@+id/text_view_day_of_the_week">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/ic_baseline_calendar_today_white_24" />

                <TextView
                    android:id="@+id/text_view_date"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="25 September"
                    android:textColor="@color/white"
                   android:autoSizeTextType="uniform" />
            </LinearLayout>







        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_days_of_week"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">
    </androidx.recyclerview.widget.RecyclerView>



</LinearLayout>